syntax = "proto3";

package authentication;

service Auth {
  rpc LoginAdmin     (LoginAdminRequest) returns (AuthAdminResponse) {}
  rpc RegisterAdmin  (RegisterAdminRequest) returns (AuthAdminResponse) {}

  rpc LoginUser     (AuthUserRequest) returns (AuthUserResponse) {}
  rpc RegisterUser  (AuthUserRequest) returns (AuthUserResponse) {}
}

message LoginAdminRequest {
  string email = 1;
  string password = 2;
}
message RegisterAdminRequest {
  string email = 1;
  string password = 2;
  string authorization = 3;
}

message AuthAdminResponse {
  string token = 1;
  Admin admin = 2;
}

message Admin {
  int32 id = 1;
  string first_name = 2;
  string surname = 3;
  string contact_number = 4;
  string email = 5;
  bool is_active = 6;
  bool is_block = 7;
  bool is_archive = 8;
  repeated string roles = 9;
  string created_at = 10;
  string updated_at = 11;
  string archived_at = 12;
  string last_login_at = 13;
}


message AuthUserRequest {
  string email = 1;
  string password = 2;
}

message AuthUserResponse {
  string token = 1;
  User user = 2;
}

message User {
  int32 id = 1;
  string first_name = 2;
  string surname = 3;
  string contact_number = 4;
  string email = 5;
  bool is_active = 6;
  bool is_verify = 7;
  bool is_block = 8;
  bool is_archive = 9;
  repeated string roles = 10;
  string created_at = 11;
  string updated_at = 12;
  string archived_at = 13;
  string last_login_at = 14;
}

